--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@vue/composition-api": "^1.0.4",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
-    "vuetify": "^2.4.0"
+    "vuetify": "^2.4.0",
+    "xstate": "^4.30.2",
+    "xstate-vue2": "^0.2.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
